@@ -134,7 +134,7 @@ __ZN3KJS16ParserRefCounted5derefEv
 __ZN3KJS17PropertyNameArray3addEPNS_7UString3RepE
 __ZN3KJS17PrototypeFunctionC1EPNS_9ExecStateEPNS_17FunctionPrototypeEiRKNS_10IdentifierEPFPNS_7JSValueES2_PNS_8JSObjectERKNS_4ListEE
 __ZN3KJS17PrototypeFunctionC1EPNS_9ExecStateEiRKNS_10IdentifierEPFPNS_7JSValueES2_PNS_8JSObjectERKNS_4ListEE
-__ZN3KJS17RegisterFileStack20allocateRegisterFileEm
+__ZN3KJS17RegisterFileStack20allocateRegisterFileEmPS0_
 __ZN3KJS19InternalFunctionImp11getCallDataERNS_8CallDataE
 __ZN3KJS19InternalFunctionImp4infoE
 __ZN3KJS19InternalFunctionImpC2EPNS_17FunctionPrototypeERKNS_10IdentifierE
